[tool.poetry]
name = "openai-cookbook"
version = "0.1.0"
description = ""
authors = ["Gabriella Melki <melki_gabriella@bah.com>"]
readme = "README.md"
packages = [{include = "openai_cookbook"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.23.6"
PyPDF2 = "^3.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
